--- a/style.css
+++ b/style.css
@@ -125,7 +125,6 @@ main {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 129px;
 }
 
 section {
@@ -134,6 +133,7 @@ section {
 
 .introduction {
   display: flex;
+  padding-bottom: 125px;
 }
 
 .text1 {
@@ -205,6 +205,7 @@ section {
   display: flex;
   flex-direction: column;
   gap: 57px;
+  padding-bottom: 125px;
 }
 
 .trendingGames {
@@ -261,6 +262,7 @@ h4 {
   display: flex;
   flex-direction: column;
   gap: 67px;
+  padding-bottom: 125px;
 }
 
 .spiderManSection h3 {
@@ -332,7 +334,12 @@ h4 {
   gap: 100px;
 }
 
+.differentBackground {
+  background-image: linear-gradient(to bottom right, #3c2a9e 0%, #3b2a9f 100%);
+}
+
 .projectsSection {
+  padding-top: 125px;
   display: flex;
   flex-direction: column;
   align-items: center;
