--- a/pages/contactUs/styleContact.css
+++ b/pages/contactUs/styleContact.css
@@ -68,7 +68,7 @@ button:hover {
 }
 
 .logo {
-  font-size: 29px;
+  font-size: 29px !important;
   color: white;
   text-decoration: none;
 }
@@ -81,7 +81,7 @@ header {
   width: 100%;
   height: 12vh;
   position: fixed;
-  background-color: linear-gradient(#2211e7 0%, #383837 100%);
+  background-color: #2211e7;
   z-index: 1;
   flex-wrap: wrap;
 }
@@ -95,6 +95,12 @@ header > div {
 
 ul {
   list-style: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .headerOptions {
@@ -318,6 +324,7 @@ button:hover {
   outline: none;
   width: 270px;
   font-size: 16px;
+  background-color: transparent;
 }
 
 .btnEmail {
