--- a/style.css
+++ b/style.css
@@ -74,6 +74,12 @@ button:hover {
   text-decoration: none;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -404,7 +410,6 @@ h4 {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-between;
   gap: 5%;
 }
 
