--- a/style.css
+++ b/style.css
@@ -377,6 +377,10 @@ h4 {
   padding-bottom: 5%;
 }
 
+.projectsSection .gridGallery > img:hover {
+  transform: scale(1.1);
+}
+
 .btnProjects {
   font-size: 20px;
   border-radius: 10px;
